--- a/requirements2.txt
+++ b/requirements2.txt
@@ -1,19 +1,19 @@
 certifi==2019.6.16
 Click==7.0
-Flask==1.1.1
+Flask==1.0.3
+Flask-SQLAlchemy==2.4.0
 gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
-joblib==0.13.2
 MarkupSafe==1.1.1
-numpy==1.17.0
-pandas==0.25.0
+numpy==1.16.4
+pandas==0.24.2
 psycopg2==2.8.3
 python-dateutil==2.8.0
-pytz==2019.2
-scikit-learn==0.21.3
-scipy==1.3.1
+pytz==2019.1
 six==1.12.0
-sklearn==0.0
-Werkzeug==0.15.5
+SQLAlchemy==1.3.5
+Werkzeug==0.15.4
 wincertstore==0.2
+scikit-image==0.14.0
+scikit-learn==0.19.2
